--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-validator": "^6.13.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3-rc.0",
