--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3-rc.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.9.0",
     "sequelize-cli": "^6.3.0"
   }
